Move some tmux commands

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,19 @@
 S3method(print,tmuxr_pane)
 S3method(print,tmuxr_session)
 S3method(print,tmuxr_window)
+export(info)
 export(kill_server)
 export(kill_session)
+export(list_panes)
 export(list_sessions)
+export(list_windows)
 export(new_session)
 export(pane_from_name)
 export(rename_session)
 export(send_enter)
+export(send_keys)
 export(send_lines)
 export(session_from_name)
-export(tmux_list_panes)
-export(tmux_list_windows)
-export(tmux_send_keys)
+export(start_server)
 export(window_from_name)
+importFrom(magrittr,"%>%")
