Add function to check whether tmux is running

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,tmuxr_pane)
 S3method(print,tmuxr_session)
 S3method(print,tmuxr_window)
 export(info)
+export(is_running)
 export(kill_server)
 export(kill_session)
 export(list_panes)
