Correctly import and export pipe operator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,tmuxr_pane)
 S3method(print,tmuxr_session)
 S3method(print,tmuxr_window)
+export("%>%")
 export(info)
 export(is_running)
 export(kill_server)
@@ -12,6 +13,7 @@ export(list_sessions)
 export(list_windows)
 export(new_session)
 export(pane_from_name)
+export(pipe_pane)
 export(rename_session)
 export(send_enter)
 export(send_keys)
