--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,10 @@ License: GPLv3
 Encoding: UTF-8
 LazyData: true
 BugReports: https://github.com/datascienceworkshops/tmuxr/issues
-Import:
+Imports:
+    purrr,
+    stringr,
     magrittr
-    purrr
-    stringr
 Collate:
     tmuxr.R
     server.R
