--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(print,tmuxr_pane)
 S3method(print,tmuxr_session)
 S3method(print,tmuxr_window)
 export("%>%")
+export(capture_pane)
+export(ends_with_prompt)
 export(info)
 export(is_running)
 export(kill_server)
@@ -14,11 +16,17 @@ export(list_windows)
 export(new_session)
 export(pane_from_name)
 export(pipe_pane)
+export(prompts)
 export(rename_session)
+export(send_backspace)
+export(send_control_c)
 export(send_enter)
 export(send_keys)
 export(send_lines)
 export(session_from_name)
+export(set_prompt)
 export(start_server)
+export(wait)
+export(wait_for_prompt)
 export(window_from_name)
 importFrom(magrittr,"%>%")
