--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Depends: R (>= 3.4.0)
 License: GPLv3
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/datascienceworkshops/tmuxr
 BugReports: https://github.com/datascienceworkshops/tmuxr/issues
 SystemRequirements: tmux
 Imports:
@@ -25,4 +26,5 @@ Collate:
     pane.R
     send.R
 RoxygenNote: 6.0.1
+Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
 Suggests: testthat
