--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(print,tmuxr_window)
 export("%>%")
 export(capture_pane)
 export(ends_with_prompt)
+export(get_prompt)
+export(has_prompt)
 export(info)
 export(is_running)
 export(kill_server)
