Rename *_from_name functions to attach_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method(print,tmuxr_pane)
 S3method(print,tmuxr_session)
 S3method(print,tmuxr_window)
 export("%>%")
+export(attach_pane)
+export(attach_session)
+export(attach_window)
 export(capture_pane)
 export(ends_with_prompt)
 export(get_prompt)
@@ -16,7 +19,6 @@ export(list_panes)
 export(list_sessions)
 export(list_windows)
 export(new_session)
-export(pane_from_name)
 export(pipe_pane)
 export(prompts)
 export(rename_session)
@@ -25,10 +27,8 @@ export(send_control_c)
 export(send_enter)
 export(send_keys)
 export(send_lines)
-export(session_from_name)
 export(set_prompt)
 export(start_server)
 export(wait)
 export(wait_for_prompt)
-export(window_from_name)
 importFrom(magrittr,"%>%")
