Add code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,14 @@ r:
   - oldrel
   - release
   - devel
+
 addons:
   apt:
     packages:
       - tmux
+
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
