Fixed some bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,5 @@ export(start_server)
 export(wait)
 export(wait_for_prompt)
 importFrom(magrittr,"%>%")
+importFrom(utils,head)
+importFrom(utils,tail)
