--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
 Description: Create, control, and record tmux sessions, windows, and panes
     using a pipeable API.
 Depends: R (>= 3.4.0)
-License: GPLv3
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/datascienceworkshops/tmuxr
