--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ matrix:
 r_packages:
   - covr
 
+r_github_packages:
+  - datascienceworkshops/tmuxr
+
 warnings_are_errors: true
 #r_check_revdep: true
 
