--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,4 +46,6 @@ artifacts:
   - path: '\*_*.zip'
     name: Bits
 
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
