Check whether tmux is installed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(capture_pane)
 export(ends_with_prompt)
 export(get_prompt)
 export(has_prompt)
+export(is_installed)
 export(is_running)
 export(kill_server)
 export(kill_session)
