--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: tmuxr
-Title: Manage tmux from R
-Version: 0.1.0.9000
+Title: Manage 'tmux'
+Version: 0.1.0
 Authors@R: c(
     person("Jeroen", "Janssens", email = "jeroen@datascienceworkshops.com", role = c("aut", "cre")),
     person("Data Science Workshops", role = c("cph", "fnd"))
     )                  
-Description: Create, control, and record tmux sessions, windows, and panes
+Description: Create, control, and record 'tmux' sessions, windows, and panes
     using a pipeable API.
 Depends: R (>= 3.4.0)
 License: MIT + file LICENSE
