--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Depends: R (>= 3.3.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/datascienceworkshops/tmuxr
+URL: https://datascienceworkshops.github.io/tmuxr, https://github.com/datascienceworkshops/tmuxr
 BugReports: https://github.com/datascienceworkshops/tmuxr/issues
 SystemRequirements: tmux
 OS_type: unix
