Add get_width and get_height functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(attach_session)
 export(attach_window)
 export(capture_pane)
 export(ends_with_prompt)
+export(get_height)
 export(get_prompt)
+export(get_width)
 export(has_prompt)
 export(is_installed)
 export(is_running)
