--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,8 @@ export(attach_pane)
 export(attach_session)
 export(attach_window)
 export(capture_pane)
-export(ends_with_prompt)
 export(get_height)
-export(get_prompt)
 export(get_width)
-export(has_prompt)
 export(is_installed)
 export(is_running)
 export(kill_server)
@@ -22,17 +19,11 @@ export(list_sessions)
 export(list_windows)
 export(new_session)
 export(pipe_pane)
-export(prompts)
 export(rename_session)
-export(send_backspace)
-export(send_control_c)
-export(send_enter)
+export(resize_window)
 export(send_keys)
-export(send_lines)
-export(set_prompt)
+export(sleep)
 export(start_server)
-export(wait)
-export(wait_for_prompt)
 importFrom(magrittr,"%>%")
 importFrom(utils,head)
 importFrom(utils,tail)
