--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,13 +20,13 @@ Imports:
     stringr,
     magrittr
 Collate:
-    tmuxr.R
+    tmuxr-package.R
+    tmux.R
     server.R
     session.R
     window.R
     pane.R
-    prompt.R
     send.R
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
 Suggests: testthat
