--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,6 @@ export(send_keys)
 export(sleep)
 export(start_server)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"%||%")
 importFrom(utils,head)
 importFrom(utils,tail)
