Add processx as dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     purrr,
     rlang,
     stringr,
-    magrittr
+    magrittr,
+    processx
 Collate:
     tmuxr-package.R
     tmux.R
