Add clock-mode command

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(attach_pane)
 export(attach_session)
 export(attach_window)
 export(capture_pane)
+export(clock_mode)
 export(get_height)
 export(get_width)
 export(is_installed)
