Add function tmux_version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(resize_window)
 export(send_keys)
 export(sleep)
 export(start_server)
+export(tmux_version)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"%||%")
 importFrom(utils,head)
