--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(resize_pane)
 export(resize_window)
 export(send_keys)
 export(start_server)
+export(tmux_command)
 export(tmux_version)
 export(width)
 importFrom(magrittr,"%>%")
