--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,13 +19,13 @@ Imports:
     processx
 Collate:
     tmuxr-package.R
-    tmux.R
     server.R
     session.R
     window.R
     pane.R
     send.R
-    props.R
+    select.R
+    utils.R
 RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
 Suggests: testthat
