--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("height<-",tmuxr_pane)
 S3method("height<-",tmuxr_session)
 S3method("height<-",tmuxr_window)
+S3method("name<-",tmuxr_pane)
 S3method("name<-",tmuxr_session)
 S3method("name<-",tmuxr_window)
 S3method("width<-",tmuxr_pane)
@@ -11,6 +12,10 @@ S3method("width<-",tmuxr_window)
 S3method(height,tmuxr_pane)
 S3method(height,tmuxr_session)
 S3method(height,tmuxr_window)
+S3method(index,tmuxr_pane)
+S3method(index,tmuxr_window)
+S3method(is_active,tmuxr_pane)
+S3method(is_active,tmuxr_window)
 S3method(name,tmuxr_pane)
 S3method(name,tmuxr_session)
 S3method(name,tmuxr_window)
@@ -30,24 +35,52 @@ export(capture_pane)
 export(clock_mode)
 export(display_message)
 export(height)
+export(index)
+export(is_active)
 export(is_installed)
 export(is_running)
+export(kill_pane)
 export(kill_server)
 export(kill_session)
+export(kill_window)
 export(list_panes)
 export(list_sessions)
 export(list_windows)
 export(name)
 export(new_session)
+export(new_window)
 export(pipe_pane)
 export(rename_session)
 export(rename_window)
 export(resize_pane)
 export(resize_window)
+export(select_pane)
+export(select_pane_active)
+export(select_pane_bottom)
+export(select_pane_bottom_left)
+export(select_pane_bottom_right)
+export(select_pane_down_of)
+export(select_pane_last)
+export(select_pane_left)
+export(select_pane_left_of)
+export(select_pane_next)
+export(select_pane_previous)
+export(select_pane_right)
+export(select_pane_right_of)
+export(select_pane_top)
+export(select_pane_top_left)
+export(select_pane_top_right)
+export(select_pane_up_of)
+export(select_window)
+export(select_window_active)
+export(select_window_end)
+export(select_window_last)
+export(select_window_next)
+export(select_window_previous)
+export(select_window_start)
 export(send_keys)
+export(split_window)
 export(start_server)
 export(tmux_command)
 export(tmux_version)
 export(width)
-importFrom(utils,head)
-importFrom(utils,tail)
