--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,27 @@
 language: r
+r: release
 cache:
   apt: true
   packages: true
 latex: false
 
 jobs:
-#- env: TMUX_VERSION=3.1
-#- env: TMUX_VERSION=3.0
-#- env: TMUX_VERSION=2.9
-#- env: TMUX_VERSION=2.8
-#- env: TMUX_VERSION=2.7
-#- env: TMUX_VERSION=2.6
-#- env: TMUX_VERSION=2.5
-#- env: TMUX_VERSION=2.4
-#- env: TMUX_VERSION=2.3
-#- env: TMUX_VERSION=2.2
+- env: TMUX_VERSION=3.1
+  r: devel
+- env: TMUX_VERSION=3.1
+  r: oldrel
+- env: TMUX_VERSION=3.1
+- env: TMUX_VERSION=3.0
+- env: TMUX_VERSION=2.9
+- env: TMUX_VERSION=2.8
+- env: TMUX_VERSION=2.7
+- env: TMUX_VERSION=2.6
+- env: TMUX_VERSION=2.5
+- env: TMUX_VERSION=2.4
+- env: TMUX_VERSION=2.3
+- env: TMUX_VERSION=2.2
 - env: TMUX_VERSION=2.1
 - os: osx
-  r: release
   env: R_CODECOV=true
 
 addons:
