--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.8.1
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2020-04-28T19:05Z
+articles: []
+last_built: 2020-04-29T15:07Z
 
