Add various layout and style functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,13 @@
 S3method("height<-",tmuxr_pane)
 S3method("height<-",tmuxr_session)
 S3method("height<-",tmuxr_window)
+S3method("layout<-",tmuxr_pane)
+S3method("layout<-",tmuxr_window)
 S3method("name<-",tmuxr_pane)
 S3method("name<-",tmuxr_session)
 S3method("name<-",tmuxr_window)
+S3method("style<-",tmuxr_pane)
+S3method("style<-",tmuxr_window)
 S3method("width<-",tmuxr_pane)
 S3method("width<-",tmuxr_session)
 S3method("width<-",tmuxr_window)
@@ -16,17 +20,23 @@ S3method(index,tmuxr_pane)
 S3method(index,tmuxr_window)
 S3method(is_active,tmuxr_pane)
 S3method(is_active,tmuxr_window)
+S3method(layout,tmuxr_pane)
+S3method(layout,tmuxr_window)
 S3method(name,tmuxr_pane)
 S3method(name,tmuxr_session)
 S3method(name,tmuxr_window)
 S3method(print,tmuxr_pane)
 S3method(print,tmuxr_session)
 S3method(print,tmuxr_window)
+S3method(style,tmuxr_pane)
+S3method(style,tmuxr_window)
 S3method(width,tmuxr_pane)
 S3method(width,tmuxr_session)
 S3method(width,tmuxr_window)
 export("height<-")
+export("layout<-")
 export("name<-")
+export("style<-")
 export("width<-")
 export(attach_pane)
 export(attach_session)
@@ -34,6 +44,7 @@ export(attach_window)
 export(capture_pane)
 export(clock_mode)
 export(display_message)
+export(format_style)
 export(height)
 export(index)
 export(is_active)
@@ -43,12 +54,25 @@ export(kill_pane)
 export(kill_server)
 export(kill_session)
 export(kill_window)
+export(layout)
+export(layout_even)
+export(layout_even_horizontal)
+export(layout_even_vertical)
+export(layout_main_horizontal)
+export(layout_main_vertical)
+export(layout_next)
+export(layout_previous)
+export(layout_rotate)
+export(layout_tiled)
+export(layout_undo)
 export(list_panes)
 export(list_sessions)
 export(list_windows)
 export(name)
 export(new_session)
 export(new_window)
+export(option_set)
+export(parse_style)
 export(pipe_pane)
 export(rename_session)
 export(rename_window)
@@ -79,8 +103,14 @@ export(select_window_next)
 export(select_window_previous)
 export(select_window_start)
 export(send_keys)
+export(send_prefix)
 export(split_window)
 export(start_server)
+export(style)
+export(style_pane)
+export(style_window)
+export(swap_pane)
+export(swap_window)
 export(tmux_command)
 export(tmux_version)
 export(width)
