--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,6 @@
 S3method("height<-",tmuxr_pane)
 S3method("height<-",tmuxr_session)
 S3method("height<-",tmuxr_window)
-S3method("layout<-",tmuxr_pane)
-S3method("layout<-",tmuxr_window)
 S3method("name<-",tmuxr_pane)
 S3method("name<-",tmuxr_session)
 S3method("name<-",tmuxr_window)
@@ -20,8 +18,6 @@ S3method(index,tmuxr_pane)
 S3method(index,tmuxr_window)
 S3method(is_active,tmuxr_pane)
 S3method(is_active,tmuxr_window)
-S3method(layout,tmuxr_pane)
-S3method(layout,tmuxr_window)
 S3method(name,tmuxr_pane)
 S3method(name,tmuxr_session)
 S3method(name,tmuxr_window)
@@ -44,8 +40,8 @@ export(attach_window)
 export(capture_pane)
 export(clock_mode)
 export(display_message)
-export(format_style)
 export(height)
+export(id)
 export(index)
 export(is_active)
 export(is_installed)
@@ -69,11 +65,11 @@ export(list_panes)
 export(list_sessions)
 export(list_windows)
 export(name)
+export(new_pane)
 export(new_session)
 export(new_window)
-export(option_set)
-export(parse_style)
 export(pipe_pane)
+export(prop)
 export(rename_session)
 export(rename_window)
 export(resize_pane)
@@ -104,11 +100,17 @@ export(select_window_previous)
 export(select_window_start)
 export(send_keys)
 export(send_prefix)
+export(set_height)
+export(set_layout)
+export(set_name)
+export(set_option)
+export(set_style)
+export(set_width)
 export(split_window)
 export(start_server)
+export(strfstyle)
+export(strpstyle)
 export(style)
-export(style_pane)
-export(style_window)
 export(swap_pane)
 export(swap_window)
 export(tmux_command)
