--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tmuxr
-Title: Manage 'tmux' sessions, windows, and panes
-Version: 0.1.0.9000
+Title: "Manage 'tmux' Sessions, Windows, and Panes"
+Version: 0.2.0
 Authors@R: c(
     person("Jeroen", "Janssens", email = "jeroen@datascienceworkshops.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-5878-8924")),
     person("Data Science Workshops", role = c("cph", "fnd"))
