--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -78,6 +78,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           echo "Installing tmux ${TMUX_VERSION}..."
+          sudo apt-get install -y libevent-dev ncurses-dev
           cd /tmp
           wget https://github.com/tmux/tmux/releases/download/${TMUX_VERSION}/tmux-${TMUX_VERSION}.tar.gz
           tar -xzf tmux-${TMUX_VERSION}.tar.gz
